# KP

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_knapsack.cpp
cmake/: KnapsackConfig.cmake.in  KnapsackWarnings.cmake
data/: invalid.txt  sample.txt
fuzz/: CMakeLists.txt  fuzz_parse.c
fuzz/corpus/: comma_separated.txt  many_items.txt  mixed_whitespace.txt  non_numeric_item.txt  overflow_weight.txt  oversized_capacity.txt  sample.txt  single_too_heavy.txt  zero_capacity.txt  zero_weight.txt
include/knapsack/: knapsack.h
src/: knapsack.c  main.c
src/cli/: cli_internal.h  format.c  parse.c
tests/: knapsack_cli_test.cpp  knapsack_integration_test.cpp  knapsack_test.cpp
